# GraphicsIdeas

./: DemoFrameworkCPP-README.md  Index.html  README.md  TODO.txt
.github/workflows/: main.yml
DemoFrameworkCPP/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
DemoFrameworkCPP/demos/: BaseDemo.hpp  CellularAutomata.cpp  CellularAutomata.hpp  FeedbackChars.cpp  FeedbackChars.hpp  FeedbackSample.cpp  FeedbackSample.hpp  KalidaVerletDemo.cpp  KalidaVerletDemo.hpp  KalidascopeDemos.cpp  KalidascopeDemos.hpp  MetaBallsDemos.cpp  MetaBallsDemos.hpp  VerletParticlesDemo.cpp  VerletParticlesDemo.hpp
DemoFrameworkCPP/include/: ColorUtils.hpp  Config.hpp  DrawingUtils.hpp  Easing.hpp  Framework.hpp  Geometry2D.hpp  ImageUtils.hpp  MathUtils.hpp  MidpointDisplacementNoise.hpp  Vector2D.hpp  VectorHelperFunctions.hpp  Verlet.hpp
DemoFrameworkCPP/src/: Framework.cpp  main.cpp
demos/2d/2d-template/: index.html
demos/2d/PixiJS/Learning/: index.html
demos/2d/dwitterPorts/: port.txt
demos/2d/dwitterPorts/circular-lines/: index.html
demos/2d/dwitterPorts/dancing-pixels/: index.html
demos/2d/dwitterPorts/grid-flipping/: index.html
demos/2d/dwitterPorts/grid-flipping-2/: index.html
demos/2d/dwitterPorts/spider-web/: index.html
demos/2d/dwitterPorts/squares/: index.html
demos/2d/dwitterPorts/target-waves/: index.html
demos/2d/dwitterPorts/target-waves-2/: index.html
demos/2d/interactive/cellular-automata-draw/: index.html
demos/3d/threejs-learning/: read.txt
demos/interactive/cellular-automata-draw/: index.html
demos/interactive/reactive-grid-gfx/: index.html
demos/interactive/reactive-grid-squares/: index.html
demos/libs/: ColorFunctions.js  DFEditor.js  DemoFramework.js  DemoFramework2.js  DrawingHelperFunctions.js  MathHelperFunctions.js  MidpointDisplacementNoiseGenerator.js  MiscUtilities.js
demos/libs/2DLib/: Circle2D.js  CollisionFuncs.js  Line2D.js  Vector2D.js
demos/libs/Particular/: Particle.js  ParticleContainer.js  ParticleSystem.js  RandomRange.js  ResourceManager.js
demos/libs/ThreeJS-Other/: waterPass.js
demos/libs/VerletIntegration/: Body.js  Constraint.js  Particle.js  VerletIntegration.js
demos/non-interactive/cellular-automata-shapes/: index.html
demos/non-interactive/feedback-bar/: index.html
demos/non-interactive/kalidascope/: index.html
demos/non-interactive/sand-art/: index.html
demos/reactive-grid-gfx/: index.html
demos/reactive-grid-gfx-colors/: index.html
demos/reactive-grid-squares/: index.html
demos/reactive-grid-wt/: index.html
demos/template/: index.html
v3/: index.html
v3/demos/: cellular-automata-2.js  cellular-automata-3.js  cellular-automata.js  particle-life.js
v3/demos/cellular-automata-noise/: index.html
v3/demos/cellular-automata-noise-2/: index.html
v3/demos/cellular-automata-noise-4/: index.html
v3/libs/: DFEditor.js  DemoFramework3.js  DrawingHelperFunctions.js  EasingFunctions.js  ImageUtilities.js  MathHelperFunctions.js  MidpointDisplacementNoiseGenerator.js
v3/libs/2DLib/: Circle2D.js
v3/libs/Particular/: HyperValue.js  LifeRange.js  ParticlePresets.js  RandomRangeAngle.js  Vector2D.js  VectorFunctions.js
v3/libs/VerletIntegration/: Effector.js  Prefabs.js
(+136 files in other folders)
